# ObjectEditor

./: .gitignore  Cargo.toml  LICENSE  README.md  pawn.json  test.pwn
include/: dynamic_object_editor.inc
src/: lib.rs
