[package]
author = "bluffblue"
name = "dynamic_object_editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "dynamic_object_editor"
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/Pycckue-Bnepeg/samp-rs" }
glam = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
once_cell = "1.18"
